# WebFeed

./: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop-schema.json  main.json
src-tauri/src/: feed.rs  lib.rs  main.rs  settings.rs
src-tauri/src/show_in_folder/: ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/lib/components/channel/: ChannelFormDialog.svelte
src/lib/components/layout/: Channel.svelte  ChannelButton.svelte  ChannelRename.svelte  ResizeBar.svelte  SideBar.svelte  SideBarOption.svelte  SideNavigation.svelte  store.ts
src/lib/db/: channel.ts  index.ts  item.ts  migrations.ts
src/lib/download/: item.ts
src/lib/elements/: Button.svelte  Icon.svelte  SizeButton.svelte
src/lib/settings/: handles.ts  store.ts
src/lib/stores/: channel.ts  item.ts
src/lib/types/: item.ts
src/routes/: +layout.svelte  +page.svelte
