[package]
name = "web-feed"
version = "0.0.0"
description = "Web Feed"
authors = ["truongvan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
tauri-plugin-fs = "2.0.0-beta"
thiserror = "1.0.56"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
